--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -1,3 +1,5 @@
 #masthead {background-color:transparent;}
-#colophon {background-color:transparent; color: black;}
-#colophon a {color: black;}
+#colophon {color:#fff;background-color:rgb(52, 98, 160);}
+#colophon a {}
+
+#wpadminbar {color:#fff;background-color:rgb(52, 98, 160);border-radius:3px;} 
