--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -30,7 +30,10 @@ li {
     margin-right: auto;
     _width: 1134px;
 }
-
+#content {
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
+}
 #masthead {background-color:transparent;}
 #colophon {color:#fff;background-color:rgb(52, 98, 160);}
 #colophon a {}
