--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -17,6 +17,7 @@ body {
 li {
     list-style: none;
 }
+
 #page {
     margin: 0 15px;
     -webkit-box-sizing: border-box;
@@ -182,4 +183,36 @@ li {
     box-shadow: 0 0 0 1px rgb(249, 249, 249) inset, 0 0 1px 1px rgba(255, 255, 255, 0.3) inset, 0 0 3px 1px rgba(128, 128, 128, 0.1) inset, 1px 1px 3px rgba(0, 0, 0, 0.1), 0 3px 3px -3px rgba(0, 0, 0, 0.1);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#30FFFFFF, endColorstr=#00FFFFFF);
     height: 50px;
+}
+.altTabs .active .navLink {
+    color: #fff;
+    background-color: rgb(52, 98, 160);
+    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, .03) inset, 0 0 0 1px rgba(0, 0, 0, .03), 0 3px 3px -3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, .03) inset, 0 0 0 1px rgba(0, 0, 0, .03), 0 3px 3px -3px rgba(0, 0, 0, 0.1);
+    -khtml-box-shadow: 0 0 0 1px rgba(0, 0, 0, .03) inset, 0 0 0 1px rgba(0, 0, 0, .03), 0 3px 3px -3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .03) inset, 0 0 0 1px rgba(0, 0, 0, .03), 0 3px 3px -3px rgba(0, 0, 0, 0.1);
+    background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.dropdown-menu>li>a {
+    color: rgb(52, 98, 160);
+}
+.dropdown-menu>li>a:hover {
+	background-color: rgb(52, 98, 160);
+    color: #fff;
+}
+.dropdown>a:hover{
+    color: #fff;
+	background: rgb(198,6,6); /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgb(198,6,6), rgb(198,6,6)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgb(198,6,6), rgb(198,6,6)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgb(198,6,6), rgb(198,6,6)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgb(198,6,6), rgb(198,6,6)); /* Standard syntax */
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
+}
+.dropdown:hover .dropdown-menu {
+    display: block;
 }
