--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -195,6 +195,13 @@ li {
     background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
 }
+#masthead .dropdown-menu, .primaryNavLinks .dropdown-menu {
+	margin: 0;
+	left:auto;
+}
+#masthead li:last-child .dropdown-menu {
+	left: -122px;
+}
 .dropdown-menu>li>a {
     color: rgb(52, 98, 160);
 }
@@ -327,4 +334,7 @@ li {
     line-height: 1em;
     float: right;
     margin-top: 30px;
+}
+.navTabs li:HOVER .dropdown-menu {
+	display: block;
 }
