--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -339,6 +339,14 @@ li {
     text-transform: uppercase;
     font-size: 12px;
 }
+#sidebar li.active a {
+    /* font-weight: bold; */
+    color: #F58220;
+}
+#sidebar li a.active {
+    /* font-weight: bold; */
+    color: #F58220;
+}
 #sidebar .sub-menu-lv-1 {
     padding-left: 15px;
 }
@@ -378,3 +386,8 @@ li {
 .navTabs li:HOVER .dropdown-menu {
 	display: block;
 }
+
+
+
+
+
