--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -386,8 +386,10 @@ li {
 .navTabs li:HOVER .dropdown-menu {
 	display: block;
 }
-
-
-
-
-
+#masthead .dropdown-menu, .primaryNavLinks .dropdown-menu {
+	margin: 0;
+	left:auto;
+}
+#masthead li:last-child .dropdown-menu {
+	left: -122px;
+}
