--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -422,3 +422,87 @@ li {
 .navigation li.active a {
 	background-color: #3C8DC5;</span>
 }
+
+
+
+#masthead .dropdown-menu, .primaryNavLinks .dropdown-menu {
+	margin: 0;
+	left:auto;
+}
+#masthead li:last-child .dropdown-menu {
+	left: -122px;
+}
+
+#cfacebook {
+	position: fixed;
+	bottom: 0px;
+	right: 8px;
+	z-index: 999999999999999;
+	width: 250px;
+	height: auto;
+	box-shadow: 6px 6px 6px 10px rgba(0, 0, 0, 0.2);
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	overflow: hidden;
+}
+
+#cfacebook .fchat {
+	float: left;
+	width: 100%;
+	height: 295px;
+	overflow: hidden;
+	display: none;
+	background-color: #fff;
+}
+
+#cfacebook .fchat .chat-single {
+	float: left;
+	line-height: 25px;
+	line-height: 25px;
+	color: #333;
+	width: 100%;
+}
+
+#cfacebook .fchat .chat-single a {
+	float: right;
+	text-decoration: none;
+	margin-right: 10px;
+	color: #888;
+	font-size: 12px;
+}
+
+#cfacebook .fchat .chat-single a:hover {
+	color: #222;
+}
+
+#cfacebook .fchat .fb-page {
+	margin-top: -130px;
+	float: left;
+}
+
+#cfacebook a.chat_fb {
+	float: left;
+	padding: 0 25px;
+	width: 250px;
+	color: #fff;
+	text-decoration: none;
+	height: 40px;
+	line-height: 40px;
+	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+	background-image:
+		url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAqCAMAAABFoMFOAAAAWlBMV…8/UxBxQDQuFwlpqgBZBq6+P+unVY1GnDgwqbD2zGz5e1lBdwvGGPE6OgAAAABJRU5ErkJggg==);
+	background-repeat: repeat-x;
+	background-size: auto;
+	background-position: 0 0;
+	background-color: #0065BF;
+	border: 0;
+	border-bottom: 1px solid #0065BF;
+	z-index: 9999999;
+	margin-right: 12px;
+	font-size: 18px;
+}
+
+#cfacebook a.chat_fb:hover {
+	color: #eee;
+	text-decoration: none;
+}
