--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -506,3 +506,71 @@ li {
 	color: #eee;
 	text-decoration: none;
 }
+
+.s_lang {
+    position: inherit;
+    float: right;
+    background: url(http://localhost/leolink/wp-content/uploads/2016/09/bg_co.png) no-repeat scroll 0 0 transparent;
+    height: 16px;
+    right: 320px;
+    top: 8px;
+    width: 53px;
+}
+.icon_social {
+    position: inherit;
+    float: right;
+    margin-left: 50px;
+    margin-right: 10px;
+}
+.s_search {
+    position: inherit;
+    float: right;
+    right: 14px;
+    top: 3px;
+}
+.box-search {
+    background: url(http://localhost/leolink/wp-content/uploads/2016/09/bg_search.png) no-repeat scroll 0 0 transparent;
+    height: 25px;
+    overflow: hidden;
+    width: 155px;
+}
+.box-search input {
+    background: none repeat scroll 0 0 transparent;
+    border: medium none;
+    color: white !important;
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-left: 10px;
+    width: 110px;
+    height: 21px;
+    float: left;
+}
+.box-search button {
+    background: none repeat scroll 0 0 transparent;
+    border: medium none;
+    height: 21px;
+    width: 30px;
+    box-shadow: none !important;
+}
+.box-search button:hover {
+    background: none repeat scroll 0 0 transparent !important;
+    border: medium none !important;
+}
+.btnn:hover {
+    color: #333333;
+    text-decoration: none;
+    background-position: 0 -15px;
+    -webkit-transition: background-position 0.1s linear;
+    -moz-transition: background-position 0.1s linear;
+    -o-transition: background-position 0.1s linear;
+    transition: background-position 0.1s linear;
+}
+.languagesocialsearch {
+    float: right;
+    text-align: right;
+    margin-top: 10px;
+    width: 70%;
+}
+#logo {
+    max-width: 20% !important;
+}
