list san pham, danh muc sp

--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -667,3 +667,8 @@ article:nth-of-type(3n+1).matata-product{
     margin-left: 0;
     clear: left;
 }
+/*Message error*/
+.showError{
+	font-weight: bold;
+	color: red;
+}
