--- a/wp-content/themes/matata/NPGroup/custom-style.css
+++ b/wp-content/themes/matata/NPGroup/custom-style.css
@@ -431,6 +431,7 @@ li {
     }
     #secondary_product{
         width: 100%;
+        margin-top: 20px; 
     }
     
     #colophon #logoo{
@@ -671,4 +672,39 @@ article:nth-of-type(3n+1).matata-product{
 .showError{
 	font-weight: bold;
 	color: red;
+}
+/*Product detail*/
+.w3-blue,.w3-hover-blue:hover{
+	color:#fff!important;
+	background-color: rgb(52, 98, 160) !important;
+}
+.w3-navbar{
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	overflow:hidden;
+}
+.w3-navbar li{
+	float:left
+}
+.w3-navbar li a,.w3-navitem{
+	display:block;
+	padding:8px 16px
+}
+.w3-navbar li a:hover{
+	color:#000;
+	background-color:#ccc;
+}
+.w3-container{
+	padding:0.01em 16px
+}
+.w3-border {
+    border: 1px solid #ccc!important;
+}
+.w3-red,.w3-hover-red:hover{
+	color:#fff!important;
+	background-color:#f44336!important
+}
+.tablink{
+	color:#fff!important;
 }
