--- a/wp-content/themes/matata/style.css
+++ b/wp-content/themes/matata/style.css
@@ -1047,6 +1047,10 @@ a:active {
     background-position: left center;
     padding-left: 20px;
 }
+.contact_cell {
+    background-position: left center;
+    padding-left: 20px;
+}
 .contact_mail {
     background-position: left center;
     padding-left: 20px;
